# ROS

./: .gitignore  README.md  trip_params.yaml
homework1_ws/src/project4/: CMakeLists.txt
homework1_ws/src/project4/src/: traffic_light_controller.cpp
homework2_ws/: README.md
homework3_ws/: README.md
homework3_ws/src/my_robot_controller/: CMakeLists.txt  package.xml
homework3_ws/src/my_robot_controller/src/: calc_trip_distance.py  speed_calc.py
homework4_ws/: README.md
homework4_ws/src/homework4/: CMakeLists.txt  package.xml
homework4_ws/src/homework4/launch/: rpm_sim.launch  speed_sim.launch
homework4_ws/src/homework4/src/: rpm_pub.py  service_client.py  service_server.py  speed_calc.py
midterm_assignment_ws/: README.md
midterm_assignment_ws/src/midterm_assignment/: CMakeLists.txt  package.xml
midterm_assignment_ws/src/midterm_assignment/launch/: weather_client.launch  weather_server.launch
midterm_assignment_ws/src/midterm_assignment/msg/: Weather.msg
midterm_assignment_ws/src/midterm_assignment/src/: send_speed_pub.py  weather_client.cpp  weather_server.cpp
midterm_assignment_ws/src/midterm_assignment/srv/: WeatherService.srv
project3_ws/devel/: .catkin  .rosinstall
project3_ws/devel/lib/pkgconfig/: project3.pc
project3_ws/devel/share/project3/cmake/: project3Config.cmake
project3_ws/src/project3/: CMakeLists.txt
project4_ws/: README.md
project4_ws/src/project4/: package.xml
project4_ws/src/project4/src/: camera_pub.cpp
sms-project2/src/project2/src/: #speed_calc.cpp#
sms-project7/: README.md
