<?xml version="1.0"?>
<package format="2">
  <name>homework4</name>
  <version>0.0.0</version>
  <description>The homework4 package</description>
  <author email="shaxzodxaydarov257@gmail.com">Shokhzod Khaydarov</author> 
  <maintainer email="shokhzod@todo.todo">shokhzod</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>turtlesim</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>turtlesim</exec_depend>

  <export>
  </export>
</package>
